--- a/inst/pres.Rmd
+++ b/inst/pres.Rmd
@@ -18,7 +18,7 @@ output:
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-# Rammer for prosess og tidsplan -- samt kake (BV)
+# Begrunnelse, prosess og tidsplan
 
 
 ## Men hvorfor..? {background-repeat="no-repeat"}
@@ -59,8 +59,8 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ## Prosess i arbeidsgruppen
 
-- Målsetting: å legger frem "noe" som et godt grunnlag for diskusjon og videre bearbeiding i hele SKDE
-- Vanskelig å få dette til om ikke utkast til strategi er fullstendig
+- Målsetting: å legge frem "noe" som et godt grunnlag for diskusjon og videre bearbeiding i hele SKDE
+- Vanskelig å få dette til om ikke utkast til strategi er "fullstendig"
 
 
 ## Men husk, alt kan repareres!!!
@@ -87,7 +87,7 @@ Hva skal vi stå for i SKDE?
         
 ## Visjon {data-background="https://raw.githubusercontent.com/areedv/strat/master/inst/figs/pyra_background.png" background-size="contain" .center}
 
-- Fremtidens målbilde
+- Hva er vi til for?
 - Vårt oppdrag -- på lang sikt (2035)
 
 
@@ -99,7 +99,7 @@ Hva skal vi stå for i SKDE?
 
 ## Strategiske områder {data-background="https://raw.githubusercontent.com/areedv/strat/master/inst/figs/pyra_background.png" background-size="contain"}
 
-- hvor vi har et gap mellom nåsituasjon og ønsket situasjon/målbilde
+- hvor vi har et gap mellom nåsituasjon og ønsket situasjon/mål
 - hvor vi særskilt vil knytte aktiviteter og investeringer for å komme dit vi ønsker
 
 
@@ -122,7 +122,7 @@ Hva skal vi stå for i SKDE?
 
 ## Våre kjerneverdier {data-background="https://raw.githubusercontent.com/areedv/strat/master/inst/figs/kjerne_bck.png" background-size="contain"}
 - Hva er nå det da?
-- Må gi gjenklang hos alle, aka alle må kunne idetifiserer seg med verdiene som foreslås
+- Må gi gjenklang hos alle, aka alle må kunne idetifisere seg med verdiene som foreslås
 
 
 
@@ -133,7 +133,7 @@ Hva skal vi stå for i SKDE?
 
 ## Mål: bedre og mer likeverdige tjenester {data-background="https://raw.githubusercontent.com/areedv/strat/master/inst/figs/mal_bck.png" background-size="contain" .center}
 
-> SKDE skal bidra til å skape en bedre og mer likeverdig fordelt helsetjeneste i Norge gjennom analyser av og forskning på variasjon i omfang og kvalitet i helsetjenesten, og gjennom kunnskapsoverføring og beslutningsstøtte til forvaltning, helseledere, helsearbeidere og pasienter
+> SKDE bidrar til å skape en bedre og mer likeverdig fordelt helsetjeneste i Norge gjennom analyser av og forskning på variasjon i omfang og kvalitet i helsetjenesten, og gjennom kunnskapsoverføring og beslutningsstøtte til forvaltning, helseledere, helsearbeidere og pasienter
 
 
 # Strategiske områder (HSB)
@@ -147,17 +147,17 @@ Hva skal vi stå for i SKDE?
 
 ## Strategisk område: forskning {data-background="https://raw.githubusercontent.com/areedv/strat/master/inst/figs/strat_bck.png" background-size="contain"}
 
-> Vi skal styrke arbeidet med kvalitetsregistre og helseatlas, og utvikler derfor klinikknær helsetjeneste-forskning med kvantitativ og kvalitativ metode med data fra bla. medisinske kvalitetsregistre, NPR og andre nasjonale helse- og befolkningsregistre.
+> Vi styrker arbeidet med kvalitetsregistre og helseatlas, og utvikler derfor klinikknær helsetjeneste-forskning med kvantitativ og kvalitativ metode med data fra bla. medisinske kvalitetsregistre, NPR og andre nasjonale helse- og befolkningsregistre.
 
 
 ## Strategisk område: kunnskapsoverføring {data-background="https://raw.githubusercontent.com/areedv/strat/master/inst/figs/strat_bck.png" background-size="contain"}
 
-> Vi skal stimulere til økt bruk av resultater fra SKDE som grunnlag for forbedringsprosjekter i helseforetakene, og utvikler derfor nye og mer målrettede aktiviteter som tar sikte på kunnskapsoverføring til beslutningstakere på alle nivåer i helsetjenesten.
+> Vi stimulerer til økt bruk av resultater fra SKDE som grunnlag for forbedringsprosjekter i helseforetakene, og utvikler derfor nye og mer målrettede aktiviteter som tar sikte på kunnskapsoverføring til beslutningstakere på alle nivåer i helsetjenesten.
 
 
 ## Strategisk område: beslutningsstøtte {data-background="https://raw.githubusercontent.com/areedv/strat/master/inst/figs/strat_bck.png" background-size="contain"}
 
-> Vi skal sikre beslutningstakere i helsetjenesten tilgang til et kunnskapsgrunnlag av høy kvalitet, og styrker derfor vår analytiske kapasitet og utvikler et sterkt fagmiljø innen kvalitetsforbedrings-metodikk.
+> Vi sikrer beslutningstakere i helsetjenesten tilgang til et kunnskapsgrunnlag av høy kvalitet, og styrker derfor vår analytiske kapasitet og utvikler et sterkt fagmiljø innen kvalitetsforbedrings-metodikk.
 
 
 
@@ -165,63 +165,48 @@ Hva skal vi stå for i SKDE?
 
 
 ## Suksessfaktorer oppsummert {data-background="https://raw.githubusercontent.com/areedv/strat/master/inst/figs/suk_bck.png" background-size="contain"}
-- Funksjonell organisering
+- Funksjonell bruk av ressurser
 - Fremtidsrettet kompetanse
 - Nærhet til helsetjenesten
 
 ## Note-to-self
 Suksessfaktorer har bare kulepunkter...
 
-## Suksessfaktor: funksjonell orgasnisering {data-background="https://raw.githubusercontent.com/areedv/strat/master/inst/figs/suk_bck.png" background-size="contain"}
+## Suksessfaktor: funksjonell bruk av ressurser {data-background="https://raw.githubusercontent.com/areedv/strat/master/inst/figs/suk_bck.png" background-size="contain"}
 
-> - God intern samordning og oppgavefordeling gjennom tydelig prioritering av oppgaver
-> - Optimalisert og situasjonsbetinget bruk av den samlede analysekapasiteten
-> - Optimalisert og samordnet bruk av stabsressursene
-> - Et samlet analysemiljø 
-> - En tverrfaglig arbeidsgruppe for en ny formidlingsportal/plan 
-> - En tverrfaglig arbeidsgruppe for å utvikle kunnskap om metoder for kvalitetsforbedring
+> - Vi har tydelig prioritering mellom oppgaver og god oppgavefordeling
+> - Vi har optimalisert og situasjonsbetinget bruk av den samlede analyse- og statistikerkapasiteten
+> - Vi har optimalisert og samordnet bruk av stabsressursene
+> - Vi har en tverrfaglig arbeidsgruppe for en ny formidlingsportal
+> - Vi har en  tverrfaglig arbeidsgruppe for å utvikle kunnskap om metoder for kvalitetsforbedring
 
 
 ## Suksessfaktor: fremtidsrettet kompetanse {data-background="https://raw.githubusercontent.com/areedv/strat/master/inst/figs/suk_bck.png" background-size="contain"}
 
 > - Vi er en lærende organisasjon, der ansatte har tid og rom for utforsking av nye ideer og verktøy
-> - Vi er en innovativ og endringsvillig organisasjon der nye ideer-….nåkka?
-> - Hvor kompetente skal forskerne våre være --- hvilken kompetanse skal vi styre mot etter oppnådd PhD?  professorkompetente? 1. aman komp?
-> - Intern opplæring/kompetanseoverføring
-> - Formell kompetanseheving (nye doktorgrader/mastergrader)
-> - Deltakelse på eksterne kurs ved behov
-> - God helseregisterkompetanse 
-> - Pålitelig databehandling?
+> - Vi er en nyskapende organisasjon der endring skapes av ansatte i et faglig felleskap og nye ideer har gode vekstvilkår
+> - Vi tilbyr kompetanseheving gjennom kurs, etterutdanning, master- og PhD-utdanning
+> - Vi sikrer pålitelig databehandling gjennom god helseregisterkompetanse og nærhet til helsetjenesten
 
 
 ## Suksessfaktor: nærhet til helsetjenesten {data-background="https://raw.githubusercontent.com/areedv/strat/master/inst/figs/suk_bck.png" background-size="contain"}
 
-> - Vi er en sentral aktør i et samordnet og koordinert fagmiljø som fungerer som støtte for(?) kvalitetsregistrene og referansegrupper for helseatlas og virksomhetsanalyser
-> - Vi har et kompetent og tverrfaglig brukerforum for SKDE som aktivt brukes til forbedring og utvikling
+> - Vi er en sentral aktør i et samordnet og koordinert fagmiljø som består av medlemmer i referansegrupper for helseatlas og virksomhetsanalyser, samt medlemmer i kvalitetsregistrenes og SKDEs fagråd
+> - Vi har et kompetent og tverrfaglig brukerforum for SKDE som aktivt brukes til egen forbedring og utvikling
 > - Vi bruker den kontakten vi har med sentrale fagfolk i arbeidet  med å formidle  resultater
 
 
 
-## Skal dette med videre? (sto under databehandling)
-- Ivareta og utvikle faglighet, grundighet, edruelighet og åpenhet  i vår databehandling
-- Ivareta og utvikle engasjementet og viljen til å støtte opp om de som er avhengige av oss 
-
-
-
-# Strategiske mål og tiltak (HSB)
-
-## Note-to-self
-Kule og strek...
+# Strategiske mål og tiltak (Handlingsplan?) (HSB)
 
 
 ## Strategisk område: forskning {data-background="https://raw.githubusercontent.com/areedv/strat/master/inst/figs/strat_bck.png" background-size="contain"}
 
 > Forskning på årsaker til variasjon i bruk og kvalitet i helsetjenesten som er nyttig i forbedringsarbeid, skal inngå som en integrert del av kjernevirksomheten i SKDE
 
-Herunder:
 
 
-## Strategisk område: forskning, forts. {data-background="https://raw.githubusercontent.com/areedv/strat/master/inst/figs/strat_bck.png" background-size="contain"}
+## Strategisk område forskning: tiltak {data-background="https://raw.githubusercontent.com/areedv/strat/master/inst/figs/strat_bck.png" background-size="contain"}
 
 > - Utvikle forskningsstøttet helseatlas med bruk av flere datakilder
 > - Prioritere og tilrettelegge for forskningssamarbeid med kvalitetsregistre
@@ -242,10 +227,9 @@ Herunder:
 
 > Sørge for at tilgjengelig styringsinformasjon, kunnskap om variasjon i helsetjenesten og kunnskap om forbedringsmetodikk når ut til beslutningstakere på alle nivåer i helsetjenesten
 
-Herunder:
 
 
-## Strategisk område: kunnskapsoverføring, forts.  {data-background="https://raw.githubusercontent.com/areedv/strat/master/inst/figs/strat_bck.png" background-size="contain"}
+## Strategisk område kunnskapsoverføring: tiltak  {data-background="https://raw.githubusercontent.com/areedv/strat/master/inst/figs/strat_bck.png" background-size="contain"}
 
 > - Bringe målrettet og tilpasset  informasjon til hvert enkelt HF, RHF og nasjonale helsemyndigheter
 > - Arbeide for at forbedrings-kunnskap/metodikk tas opp i alle kvalitetsregistre
@@ -257,41 +241,17 @@ Herunder:
 
 
 ## Strategisk område: beslutningsstøtte  {data-background="https://raw.githubusercontent.com/areedv/strat/master/inst/figs/strat_bck.png" background-size="contain"}
-- Beholde og utvikle posisjonen som nasjonalt ledende innen kunnskap om medisinske kvalitetsregistre og NPR, som datakilder for kvalitetsforbedring og styringsinformasjon
-    - Styrke miljøet for analysestøtte basert på registerdata
-    - Markere SKDE i nasjonale nettverk/arbeidsgrupper
-    - Utvikle et sterkt miljø for kunnskap om metoder for kvalitetsforbedring
-    - Identifisere og utforme relevant styringsinformasjon
-- Utvikle kompetansen på og prosedyrene for bruk av andre helseregistre samt koblede datasett, som datakilder for kvalitetsforbedring og - styringsinformasjon
+
+> Beholde og utvikle posisjonen som nasjonalt ledende innen kunnskap om medisinske kvalitetsregistre og NPR, som datakilder for kvalitetsforbedring og styringsinformasjon
+
+> Utvikle kompetansen på og prosedyrene for bruk av andre helseregistre samt koblede datasett, som datakilder for kvalitetsforbedring og - styringsinformasjon
+
+## Strategisk område beslutningsstøtte: tiltak
+    
+> - Styrke miljøet for analysestøtte basert på registerdata
+> - Markere SKDE i nasjonale nettverk/arbeidsgrupper
+> - Utvikle et sterkt miljø for kunnskap om metoder for kvalitetsforbedring
+> - Identifisere og utforme relevant styringsinformasjon
+ 
 
 
-## Note-to-self
-Skal vi virkelig ha dette på nytt igjen???
-
-## Suksessfaktor: funksjonell orgasnisering
-
-> - God intern samordning og oppgavefordeling gjennom tydelig prioritering av oppgaver
-> - Optimalisert og situasjonsbetinget bruk av den samlede analysekapasiteten
-> - Optimalisert og samordnet bruk av stabsressursene
-> - Et samlet analysemiljø 
-> - En tverrfaglig arbeidsgruppe for en ny formidlingsportal/plan 
-> - En tverrfaglig arbeidsgruppe for å utvikle kunnskap om metoder for kvalitetsforbedring
-
-
-## Suksessfaktor: fremtidsrettet kompetanse
-
-> - Vi er en lærende organisasjon, der ansatte har tid og rom for utforsking av nye ideer og verktøy
-> - Vi er en innovativ og endringsvillig organisasjon der nye ideer-….nåkka?
-> - Hvor kompetente skal forskerne våre være --- hvilken kompetanse skal vi styre mot etter oppnådd PhD?  professorkompetente? 1. aman komp?
-> - Intern opplæring/kompetanseoverføring
-> - Formell kompetanseheving (nye doktorgrader/mastergrader)
-> - Deltakelse på eksterne kurs ved behov
-> - God helseregisterkompetanse 
-> - Pålitelig databehandling?
-
-
-## Suksessfaktor: nærhet til helsetjenesten
-
-> - Vi er en sentral aktør i et samordnet og koordinert fagmiljø som fungerer som støtte for(?) kvalitetsregistrene og referansegrupper for helseatlas og virksomhetsanalyser
-> - Vi har et kompetent og tverrfaglig brukerforum for SKDE som aktivt brukes til forbedring og utvikling
-> - Vi bruker den kontakten vi har med sentrale fagfolk i arbeidet  med å formidle  resultater
