--- a/inst/index.Rmd
+++ b/inst/index.Rmd
@@ -192,7 +192,7 @@ Hva skal vi stå for i SKDE?
 
 > Vi styrker arbeidet med kvalitetsregistre og helseatlas, og utvikler derfor klinikknær helsetjeneste-forskning med kvantitativ og kvalitativ metode med data fra bla. medisinske kvalitetsregistre, NPR og andre nasjonale helse- og befolkningsregistre.
 
-## Strategisk område forkning: mål
+## Strategisk område forskning: mål
 
 - Forskning på årsaker til variasjon i bruk og kvalitet i helsetjenesten som er nyttig i forbedringsarbeid, skal inngå som en integrert del av kjernevirksomheten i SKDE
 - Skape handlingsrom gjennom ekstern finansiering
